--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: url("background.png");
   background-attachment: fixed;
   background-size: cover;
 
   color: white;
-  font-family: "Lucida Console";
-  margin: 0px;
-  font-weight: lighter;
+  font-family: "Quicksand", "Lucida Console";
   letter-spacing: 0.05rem;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 body, html {
@@ -17,18 +22,20 @@ body, html {
 
 p {
   font-size: 1em;
+  margin: 1em 0;
 }
 
 h1 {
-  font-size: 5em;
+  font-size: 5rem;
+  margin-bottom: 1em;
 }
 
 table {
-  padding-top: 20px;
+  margin-top: 20px;
 }
 
 td {
-  padding-right: 20px;
+  margin-right: 20px;
 }
 
 .parallax {
@@ -47,5 +54,5 @@ h1, h2 {
 }
 
 header, footer, section {
-    padding: 100px;
+    margin: 100px;
 }
