--- a/assets/style.css
+++ b/assets/style.css
@@ -43,7 +43,7 @@ td {
 
 .parallax {
   background-image: url('parallax.jpg');
-  
+
   height: 100%;
   background-attachment: fixed;
   background-position: center;
@@ -60,4 +60,17 @@ h1, h2, h3 {
 
 header, footer, section {
     margin: 100px;
+}
+
+footer + ul {
+  list-style-type:none;
+}
+
+a {
+  color:white;
+  text-decoration:none;
+}
+
+a:hover, a:focus {
+    text-decoration:underline;
 }
