--- a/index.css
+++ b/index.css
@@ -13,32 +13,42 @@
 body {
     background: linear-gradient(-45deg, #e83f75, #fc7292,#f1bbab,#fff5ed);
 
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     background-size: 400% 400%;
-    animation: gradient 10s ease infinite alternate;
+    animation: gradient 15s ease infinite alternate;
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: row;
 }
 
 @keyframes wiggle {
     0% {
-        transform: rotate(1.4deg);
+        transform: rotate3d(0.2, 1, 0.2, 0deg);
     }
     50% {
-        transform: rotate(-1.4deg);
+        transform: rotate3d(0.2, 1, 0.2, 20deg);
     }
     100% {
-        transform: rotate(1.4deg);
+        transform: rotate3d(0.2, 1, 0.2, 0deg);
+    }
+}
+
+@keyframes flip {
+    0% {
+        transform: rotate3d(0.2, 1, 0.2, 0deg);
+    }
+    20% {
+        transform: rotate3d(0.2, 1, 0.2, 180deg);
     }
 }
 
 .hitbox {
     background-color: transparent;
-    aspect-ratio: 3/2;
+    aspect-ratio: 3.5/2;
     width: 20%;
     min-width: 300px;
     min-height: 200px;
@@ -46,24 +56,25 @@ body {
 }
 
 .hitbox:not(:hover){
-    animation: wiggle 2s infinite;
+    animation: wiggle 6s ease-in-out infinite;
+}
+
+.hitbox:hover .card {
+    transform: scale(1.5) rotateY(180deg);
 }
 
 .card {
     position: relative;
     width: 100%;
     height: 100%;
-    transition: transform 0.8s;
+    transition: transform 1.2s;
     transform-style: preserve-3d;
 
-    border-radius: 10px;
+    border-radius: 4px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
 
     background: #fff;
-}
-
-.hitbox:hover .card {
-    transform: scale(1.5) rotateY(180deg);
+    animation: flip 3s 1;
 }
 
 @media screen and (max-width: 500px) {
