--- a/index.css
+++ b/index.css
@@ -27,13 +27,13 @@ body {
 
 @keyframes wiggle {
     0% {
-        transform: rotate3d(0.2, 1, 0.2, -5deg);
+        transform: rotate3d(0.2, 0, 0.2, -5deg);
     }
     50% {
-        transform: rotate3d(0.2, 1, 0.2, 10deg);
+        transform: rotate3d(0.2, 0, 0.2, 5deg);
     }
     100% {
-        transform: rotate3d(0.2, 1, 0.2, -5deg);
+        transform: rotate3d(0.2, 0, 0.2, -5deg);
     }
 }
 
@@ -55,10 +55,9 @@ body {
     width: 20%;
     min-width: 300px;
     min-height: 200px;
-    perspective: 1000px; 
 }
 
-.hitbox:not(:hover){
+.hitbox:not(:hover) {
     animation: wiggle 4s ease-in-out infinite;
 }
 
@@ -70,14 +69,14 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    transition: transform 1.2s;
-    transform-style: preserve-3d;
-
+    
     border-radius: 4px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
-
     background: #fff;
+    
     animation: flip 3s 1;
+    transition: transform 1.2s;
+    transform-style: preserve-3d;
 }
 
 @media screen and (max-width: 500px) {
@@ -92,6 +91,8 @@ body {
     height: 100%;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;  
+    
+    transform: rotateX(0deg);
 }
 
 .front {
